--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,4 @@
 @import "config/reset";
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
+@import "header";
