--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -1,23 +1,4 @@
 = render 'module/header'
-= render 'module/header'
--# %nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
--#   %button.navbar-toggler.navbar-toggler-right{"aria-controls" => "navbarTogglerDemo02", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#navbarTogglerDemo02", "data-toggle" => "collapse", :type => "button"}
--#     %span.navbar-toggler-icon
--#   %a.navbar-brand{:href => "#!"}
--#     %h2 MyBlog
--#   #navbarTogglerDemo02.collapse.navbar-collapse
--#     %ul.navbar-nav.mr-auto.mt-2.mt-md-0
--#       %li.nav-item.active
--#         %a.nav-link{:href => "#!"}
--#           Home
--#           %span.sr-only (current)
--#       %li.nav-item
--#         %a.nav-link{:href => "#!"} Link
--#     .dropdown
--#       %button#dropdownMenu1.btn.btn-secondary.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :type => "button"}
--#         menu
--#       .dropdown-menu{"aria-labelledby" => "dropdownMenu1"}
--#         %a.dropdown-item{:href => "#!"} Action
--#         %a.dropdown-item{:href => "#!"} Another action
-  
 
+.content__box
+  .content__box__center
