トップページ作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "config/reset";
 // Custom bootstrap variables must be set or imported *before* bootstrap.
+@import "style";
 @import "bootstrap";
 @import "header";
 @import "index";
