--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -1,4 +1,4 @@
-= render 'module/header'
+-# = render 'module/header'
 
-.content__box
-  .content__box__center
+-# .content__box
+-#   .content__box__center
