--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,5 +2,6 @@
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "style";
 @import "bootstrap";
+@import "font-awesome";
 @import "header";
 @import "index";
