--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -1,4 +1,4 @@
--# = render 'module/header'
-
--# .content__box
--#   .content__box__center
+.home
+  %h1.logo
+    %a{:href => "/tweets/photo"}
+      %img{:alt => "SAMPLE COMPANY", :src => "images/logo.png"}/
