--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,24 +2,13 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %meta{:content => "IE=edge", "http-equiv" => "X-UA-Compatible"}/
     %title MYBLOG
-    %meta{:content => "width=device-width, initial-scale=1", :name => "viewport"}/
-    %meta{:content => "ここにサイト説明を入れます", :name => "description"}/
-    %meta{:content => "キーワード１,キーワード２,キーワード３,キーワード４,キーワード５", :name => "keywords"}/
-    /[if lt IE 9]
-    -# %script{:src => "https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"}
-    -# %script{:src => "https://oss.maxcdn.com/respond/1.4.2/respond.min.js"}
-    -# ![endif]--&gt;
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
 
 
-  %body.home
-    %h1.logo
-      %a{:href => "index2.html"}
-        %img{:alt => "SAMPLE COMPANY", :src => "images/logo.png"}/
+  %body
 
     = yield
     %footer
