blogパスを通す

--- a/app/views/module/_header.html.haml
+++ b/app/views/module/_header.html.haml
@@ -5,7 +5,7 @@
     %h2 Welcome to my page
   #navbarTogglerDemo02.collapse.navbar-collapse
     %ul.navbar-nav.mr-auto.mt-2.mt-md-0
-      %li.nav-item.active
+      %li.nav-item
         %a.nav-link{:href => "#!"}
           = fa_icon("home")
           Home　　
@@ -15,7 +15,7 @@
           = fa_icon("user")
           profile　　
       %li.nav-item
-        %a.nav-link{:href => "#!"}
+        %a.nav-link{:href => "/blogs"}
           = fa_icon("book") 
           blog　
       %li.nav-item__port
