--- a/app/views/tweets/photo.html.haml
+++ b/app/views/tweets/photo.html.haml
@@ -10,29 +10,29 @@
     .col-lg-4.mb-3.col-sm-6
       .img-thumbnail
         = link_to('#') do
-          = image_tag "cover_4.jpg", size: "width 100%", alt: "test"
+          = image_tag "biwako.jpeg", size: "width 100%", alt: "test"
           aaaaaa
     .col-lg-4.mb-3.col-sm-6
       .img-thumbnail
-        = image_tag "cover_4.jpg", size: "width 100%", alt: "test"
+        = image_tag "biwako.jpeg", size: "width 100%", alt: "test"
     .col-lg-4.mb-3.col-sm-6
       .img-thumbnail
-        = image_tag "cover_4.jpg", size: "width 100%", alt: "test"
+        = image_tag "biwako.jpeg", size: "width 100%", alt: "test"
     .col-lg-4.mb-3.col-sm-6
       .img-thumbnail
-        = image_tag "cover_4.jpg", size: "width 100%", alt: "test"
+        = image_tag "biwako.jpeg", size: "width 100%", alt: "test"
     .col-lg-4.mb-3.col-sm-6
       .img-thumbnail
-        = image_tag "cover_4.jpg", size: "width 100%", alt: "test"
+        = image_tag "biwako.jpeg", size: "width 100%", alt: "test"
     .col-lg-4.mb-3.col-sm-6
       .img-thumbnail
-        = image_tag "cover_4.jpg", size: "width 100%", alt: "test"
+        = image_tag "biwako.jpeg", size: "width 100%", alt: "test"
     .col-lg-4.mb-3.col-sm-6
       .img-thumbnail
-        = image_tag "cover_4.jpg", size: "width 100%", alt: "test"
+        = image_tag "biwako.jpeg", size: "width 100%", alt: "test"
     .col-lg-4.mb-3.col-sm-6
       .img-thumbnail
-        = image_tag "cover_4.jpg", size: "width 100%", alt: "test"
+        = image_tag "biwako.jpeg", size: "width 100%", alt: "test"
     .col-lg-4.mb-3.col-sm-6
       .img-thumbnail
-        = image_tag "cover_4.jpg", size: "width 100%", alt: "test"
+        = image_tag "biwako.jpeg", size: "width 100%", alt: "test"
